client/src/stylesheets/app.css
body{
   background-color: #343a40; 
   background-color: yellowgreen; 
   background-color: green;
   background-color: #7ba32a;
}

button:focus{
  outline-width: 0;
}

.container-fluid{
  background-color: yellowgreen;
  background-color: green;
  background-color: #7ba32a;
}

#color-button-list-row{
}

#color-button-list-col{
  padding: 0;
}


#tool-button-list-col-1{
  margin-top: 2vw;
  padding: 0;
  background-color: yellowgreen;
  border-style: solid;
  border-bottom: none;
  border-color: #1d2124;
}

#tool-button-list-col-2{
  padding: 0;
  background-color: yellowgreen;
  border-style: solid;
  border-color: #1d2124;
}

#convert-button-list-col{
  padding: 0;
  background-color: yellowgreen;
  border-style: solid;
  border-left: none;
  border-color: #1d2124;
}

#output-button-list-col{
  padding: 0;
  background-color: yellowgreen;
  border-style: solid;
  border-left: none;
  border-color: #1d2124;
}

#drawing-canvas-col{
  /* background-color: lightgreen; */
  padding: 0;
}

#layers-menu-col{
  background-color: yellowgreen;
  border-style: solid;
  border-left: none;
  border-top: none;
  border-color: #1d2124;
  padding: 0;
}

#output-canvas-col{
  border-style: solid;
  border-color: #1d2124;
  border-left: none;
  border-top: none;
  background-color: #7ba32a;
}

